--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 january 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3333237507</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nawabshah,sindh,Pakistan</span></li>
                 </ul>
@@ -542,7 +542,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Good work
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/quest.jpg" class="testimonial-img" alt="">
@@ -555,7 +555,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                 Responsible person and understanding professional work Excellent
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/pite.jpg" class="testimonial-img" alt="">
