--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is ZEESHAN ALI i am 18 year old i have complete my intermediate from govt Boyts degree college nawabshah and Now i am doing undergraduate program in computer science (year:2022-2023) section . programing is my hobby and interset thats why i am doing web development and programing this is my part time job in which i am Earning very well i work on many projects i am also doing freelancing in fiverr since 1 YEAR.</p>
+          <p>My name is ZEESHAN ALI i am 18 year old i have complete my intermediate from govt Boys degree college nawabshah and Now i am doing undergraduate program in computer science (year:2022-2023) section . programing is my hobby and interset thats why i am doing web development and programing this is my part time job in which i am Earning very well i work on many projects i am also doing freelancing in fiverr since 1 YEAR.</p>
         </div>
 
         <div class="row">
@@ -253,7 +253,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Zeeshan ALi</h4>
-              <p><em>i am 18 year old i have complete my intermediate from govt Boyts degree college nawabshah and Now i am doing undergraduate program in computer science (year:2022-2023) section . programing is my hobby and interset thats why i am doing web development and programing this is my part time job in which i am Earning very well i work on many projects i am also doing freelancing in fiverr since 1 YEAR.</em></p>
+              <p><em>i am 18 year old i have complete my intermediate from govt Boys degree college nawabshah and Now i am doing undergraduate program in computer science (year:2022-2023) section . programing is my hobby and interset thats why i am doing web development and programing this is my part time job in which i am Earning very well i work on many projects i am also doing freelancing in fiverr since 1 YEAR.</em></p>
               <ul>
                 <li>Nawabshah,sindh,Pakistan</li>
                 <li>+92 3333237507</li>
