--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4" data-aos="fade-in">
             <img src="profile.jpeg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-in">
             <h3>Web Developer &amp; Programer .</h3>
             <p class="fst-italic">
               web designing is my passion i have created many websites which are live now and give benefits to institutes.
@@ -131,7 +131,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>i am totaly independ of time i am Boss of my own No one have authority to give order to me i can do work with my own style.</p>
+          <p></p>
         </div>
 
         <div class="row no-gutters">
