--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="hero-container" data-aos="fade-up">
       <h1>Zeeshan Ali</h1>
       <p>I'm <span class="typed" data-typed-items="Graphic Designer,Web Developer, Freelancer, Programer"></span></p>
     </div>
@@ -89,10 +89,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-in">
+          <div class="col-lg-4" data-aos="fade-up">
             <img src="profile.jpeg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-in">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer &amp; Programer .</h3>
             <p class="fst-italic">
               web designing is my passion i have created many websites which are live now and give benefits to institutes.
