--- a/index.html
+++ b/index.html
@@ -516,12 +516,12 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Well done dear .
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/pite.jpg" class="testimonial-img" alt="">
-                <h3>PITE SINDH</h3>
-                <h4>Director  </h4>
+                <img src="assets/img/testimonials/FB_IMG_1671620595995.jpg" class="testimonial-img" alt="">
+                <h3> Mentor </h3>
+                <h4>Mr:Touseef Raja </h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -529,12 +529,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Keep it up .
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/govt of sindh.jpg" class="testimonial-img" alt="">
-                <h3>Sindh government</h3>
-                <h4>IT MANAGER</h4>
+                <img src="assets/img/testimonials/FB_IMG_1671620604644.jpg" class="testimonial-img" alt="">
+                <h3>Quest Nawabshah</h3>
+                <h4>Dr: fareed jakhio</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -568,12 +568,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  I'm fell proud for u.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/govt of sindh.jpg" class="testimonial-img" alt="">
-                <h3>Sindh government</h3>
-                <h4>IT MANAGER</h4>
+                <img src="assets/img/testimonials/FB_IMG_1671620623021.jpg" class="testimonial-img" alt="">
+                <h3>Mentor</h3>
+                <h4>Mr:fida dehri :</h4>
               </div>
             </div><!-- End testimonial item -->
 
