--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <title>ZEESHAN ALI</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="" name="Zeeshan khaskheli,zeeshan , web developer nawabshah , Quest nawabshah,Zeeshan portfolio
+    Zeeshan Ali khaskheli , portfolio , web desigmer nawabshah ,nawabshah">
 
   <!-- Favicons -->
   <link href="profile.png" rel="icon">
