--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>ZEESHAN ALI</title>
-  <meta content="" name="description">
-  <meta content="" name="Zeeshan khaskheli,zeeshan , web developer nawabshah , Quest nawabshah,Zeeshan portfolio
+  <meta content="" name="description" content="web developer and programer">
+  <meta content="" name="keywords" content="Zeeshan khaskheli,zeeshan , web developer nawabshah , Quest nawabshah,Zeeshan portfolio
     Zeeshan Ali khaskheli , portfolio , web desigmer nawabshah ,nawabshah">
 
   <!-- Favicons -->
