--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is ZEESHAN ALI i am 18 year old i have complete my intermediate from govt Boys degree college nawabshah and Now i am doing undergraduate program in computer science (year:2022-2023) section . programing is my hobby and interset thats why i am doing web development and programing this is my part time job in which i am Earning very well i work on many projects i am also doing freelancing in fiverr since 1 YEAR.</p>
+          <p>I am ZEESHAN ALI i am 18 year's old i have completed my intermediate from Govt: Boys degree college nawabshah and Now i am doing undergraduation program in computer science (year:2022-2023) section . Programing is my hobby and interset .i am expert in web development in which i am Earning very well .</p>
         </div>
 
         <div class="row">
