--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am ZEESHAN ALI i am 18 year's old i have completed my intermediate from Govt: Boys degree college nawabshah and Now i am doing undergraduation program in computer science (year:2022-2023) section . Programing is my hobby and interset .i am expert in web development in which i am Earning very well .</p>
+          <p>I am ZEESHAN ALI i am 18 year's old i have completed my intermediate from Govt: Boys degree college nawabshah and Now i am doing undergraduation program in computer science (year:2022-2023) section . Programing is my hobby and interest .i am expert in web development in which i am Earning very well .</p>
         </div>
 
         <div class="row">
